# ToDOlist

./: CMakeLists.txt
proto/: TaskService.proto  task.proto
src/: Client.cpp  Server.cpp  main.cpp
src/api/: RequestResult.cpp  RequestResult.h  Service.h  TODOList.h  TaskAPI.h  TaskCreationResult.cpp  TaskCreationResult.h  TaskDTO.cpp  TaskDTO.h  TaskDTOConverter.cpp  TaskDTOConverter.h  TaskFactory.cpp  TaskFactory.h  TaskIDConverter.cpp  TaskIDConverter.h  TaskIDConverterInterface.h  TaskModificationResult.cpp  TaskModificationResult.h  TaskService.cpp  TaskService.h  TaskServiceInterface.h  TaskUserDescriptor.cpp  TaskUserDescriptor.h  UserTaskID.cpp  UserTaskID.h  task_service.h
src/cli/: CLI.h  CLITaskIO.cpp  CLITaskIO.h  Console.cpp  Console.h  ConsoleContext.cpp  ConsoleContext.h  ConsoleIO.cpp  ConsoleIO.h  ConsoleIOInterface.h  ConsoleStateMachine.cpp  ConsoleStateMachine.h  TaskBuffer.h  TaskTableIO.cpp
src/cli/get_commands/: GetAll.cpp  GetAll.h  GetByLabel.cpp  GetByLabel.h  GetCommand.h  GetThisWeek.cpp  GetThisWeek.h  GetToday.cpp  GetToday.h
src/cli/states/: AddSubTaskState.cpp  AddSubTaskState.h  AddTaskState.cpp  AddTaskState.h  DeleteStateParseID.cpp  DeleteStateParseID.h  DeleteTaskState.cpp  DeleteTaskState.h  InputState.cpp  InputState.h  ParseAddType.cpp  ParseAddType.h  ParseCommand.cpp  ParseCommand.h  ParseGetParam.cpp  ParseGetParam.h  ParseGetParem.cpp  ParseGetParem.h  ParseID.cpp  ParseID.h  ParseShowTag.cpp  ParseShowTag.h  ParseState.cpp  ParseState.h  ParseTask.cpp  ParseTask.h  ParseTaskDate.cpp  ParseTaskDate.h  ParseTaskLabel.cpp  ParseTaskLabel.h  ParseTaskName.cpp  ParseTaskName.h  ParseTaskPriority.cpp  ParseTaskPriority.h  ShowState.cpp  ShowState.h  StartState.cpp  StartState.h  State.cpp  State.h  (+2 more)
src/cli/tokenization/: Keyword.h  KeywordTokenizer.cpp  KeywordTokenizer.h  KeywordTokenizerInterface.h  MultiwordDataTokenizer.cpp  MultiwordDataTokenizer.h  MultiwordDataTokenizerInterface.h  SpecwordFinder.cpp  SpecwordFinder.h  Token.cpp  Token.h  Tokenizer.h  TypeToken.h
src/client/: Client.cpp  TODOList.cpp  TODOList.h
src/core/: ModelHolder.cpp  ModelHolder.h  ModelHolderInterface.h  RepositoryHolder.cpp  RepositoryHolder.h
src/core/api/: GrpcTaskServiceAdaptor.cpp  GrpcTaskServiceAdaptor.h  GrpcTaskServiceImpl.cpp  GrpcTaskServiceImpl.h  RequestResult.h  TODOList.cpp  TODOList.h  TaskCreationResult.h  TaskDTO.h  TaskModificationResult.h  TaskService.cpp  TaskService.h  TaskServiceInterface.h
src/core/memory_model/: ModelCreator.cpp  ModelCreator.h  ModelCreatorInterface.h  RepositoryCreator.cpp  RepositoryCreator.h  TaskModel.cpp  TaskModel.h  TaskModelInterface.h
src/core/persistence/: IostreamModelPersister.cpp  IostreamModelPersister.h  IostreamRepositoryPersister.cpp  IostreamRepositoryPersister.h  ModelPersister.h  Persister.h  PersisterCreator.cpp  PersisterCreator.h  ProtoConvert.cpp  ProtoConvert.h  StreamOwner.h  TaskDataConverter.cpp  TaskDataConverter.h  TaskDataConverterInterface.h
src/core/service_creation/: TODOList.cpp  TODOList.h
src/memory_model/: DatePriorityView.cpp  DatePriorityView.h  LinkManager.cpp  LinkManager.h  LinkManagerInterface.h  PriorityView.cpp  PriorityView.h  PriorityViewInterface.cpp  PriorityViewInterface.h  ReferenceHandler.cpp  ReferenceHandler.h  TagPriorityView.cpp  TagPriorityView.h  TagPriorityViewInterface.h  Task.cpp  Task.h  TaskController.cpp  TaskController.h  TaskControllerInterface.h  TaskDTO.cpp  TaskDTO.h  TaskEntity.cpp  TaskEntity.h  TaskFactory.cpp  TaskFactory.h  TaskFactoryInterface.h  TaskID.cpp  TaskID.h  TaskIDConverter.h  TaskIDFactory.cpp  TaskIDFactory.h  TaskIDFactoryInterface.h  TaskNode.cpp  TaskNode.h  TaskService.cpp  TaskService.h  TaskStorage.cpp  TaskStorage.h  TaskStorageInterface.h  TaskStrorage.cpp  (+4 more)
src/memory_model/data/: TaskIDFactory.h  TaskStorageInterface.h
src/serialization/: ExternalServiceStorage.h  IstreamProtoFileLoader.h  IstreamServiceDeserializer.cpp  IstreamServiceDeserializer.h  OstreamServiceSerializer.cpp  OstreamServiceSerializer.h  ProtoTaskDeserializer.cpp  ProtoTaskDeserializer.h  ProtoTaskSerializer.cpp  ProtoTaskSerializer.h  ProtobufIstreamServiceDeserializer.cpp  ProtobufIstreamServiceDeserializer.h  ProtobufOstreamServiceSerializer.cpp  ProtobufOstreamServiceSerializer.h  Serialization.cpp  Serialization.h  ServiceDeserializer.h  ServiceSerializer.h  TaskSerealization.cpp  TaskSerialization.h
src/server/: Server.cpp
src/task_io/: task_io.h  task_io.hpp
tests/: PriorityViewTest.cpp  TagPriorityViewTest.cpp  TaskCreationResultTest.cpp  TaskNodeTest.cpp  TestDatePriortyView.cpp  TestLinkManager.cpp  TestReferenceHandler.cpp  TestRequestResult.cpp  TestTagPriorityView.cpp  TestTaskCreationResult.cpp  TestTaskDTO.cpp  TestTaskEntity.cpp  TestTaskFactory.cpp  TestTaskID.cpp  TestTaskIDFactory.cpp  TestTaskModificationResult.cpp  TestTaskNode.cpp  TestTaskService.cpp  TestTaskStorage.cpp  test_main.cpp
tests/cli/: TestConsoleContext.cpp  TestConsoleIO.cpp  TestConsoleStateMachine.cpp  TestInputTaskContext.cpp  TestInputTaskStateMachine.cpp  TestKeywordTokenizer.cpp  TestLazyInitialier.cpp  TestSpecWordFinder.cpp  TestStateFactory.cpp
tests/core/: TestDatePriortyView.cpp  TestModelHolder.cpp  TestRepositoryTaskDTO.cpp  TestRequestResult.cpp  TestTaskCreationResult.cpp  TestTaskDTO.cpp  TestTaskModel.cpp  TestTaskModificationResult.cpp  TestTaskService.cpp  test_main.cpp
tests/mocks/: CoreMocks.h  MockContext.h  MockIO.h  MockInputTaskContext.h  MockInputTaskStateMachine.h  MockIstreamDeserializer.h  MockKeywordTokenizer.h  MockModelHolder.h  MockModelPersister.h  MockModelPersisterCreator.h  MockOstreamSerializer.h  MockParseState.h  MockParseStateFactory.h  MockProtoFileLoader.h  MockRepositoryHolder.h  MockService.h  MockState.h  MockStateFactory.h  MockStreamOwner.h  MockTaskDataConverter.h  MockTaskDeserializer.h  MockTaskSerializer.h
tests/serialization/: TestProtoDeserializer.cpp  TestProtoTaskSerializer.cpp  TestProtobufIstreamServiceDeserializer.cpp  TestProtobufOstreamServiceDeserializer.cpp
(+161 files in other folders)
